--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+ <!-- Using Mistral AI API : -->
 MISTRALAI_API_KEY=""
+
+  <!-- If we exceed the free version, Use Fireworks AI API: -->
+FIREWORKS_API_KEY=""
